@@ -19,7 +19,7 @@ what leads to excessive tables information.
 Functionally similar to:
 
 | $ snmptrap -v2c -c public demo.snmplabs.com 12345 1.3.6.1.6.3.1.1.5.2
-| $ snmpinform -v2c -c public localhost 12345 1.3.6.1.6.3.1.1.5.2
+| $ snmpinform -v2c -c public demo.snmplabs.com 12345 1.3.6.1.6.3.1.1.5.2
 | $ snmptrap -v2c -c public demo.snmplabs.com 12345 1.3.6.1.6.3.1.1.5.2
 
 """#
@@ -51,5 +51,5 @@ snmpEngine = SnmpEngine()
 loop = asyncio.get_event_loop()
 loop.run_until_complete(
     asyncio.wait([sendone(snmpEngine, 'demo.snmplabs.com', 'trap'),
-                  sendone(snmpEngine, 'localhost', 'inform')])
+                  sendone(snmpEngine, 'demo.snmplabs.com', 'inform')])
 )
