@@ -38,7 +38,7 @@ def run():
         sendNotification(
             snmpEngine,
             CommunityData('public'), # mpModel=0),
-            UdpTransportTarget(('localhost', 162)),
+            UdpTransportTarget(('demo.snmplabs.com', 162)),
             ContextData(),
             'inform',
             NotificationType(
