@@ -12,18 +12,18 @@ security settings:
 * with user 'usr-md5-none', auth: MD5, priv NONE
 * over IPv4/UDP
 * send INFORM notification
-* to multiple Managers at 127.0.0.1:162, 127.0.0.2:162
+* to multiple Managers at 195.218.195.228:162, 195.218.195.228:162
 * with TRAP ID 'coldStart' specified as an OID
 * include managed objects information:
   1.3.6.1.2.1.1.1.0 = 'Example Notificator'
 
 Functionally similar to:
 
-| $ snmpinform -v3 -l authPriv -u usr-md5-none -A authkey1 127.0.0.1 0 1.3.6.1.6.3.1.1.5.1 1.3.6.1.2.1.1.1.0 s 'Example notification'
+| $ snmpinform -v3 -l authPriv -u usr-md5-none -A authkey1 195.218.195.228 0 1.3.6.1.6.3.1.1.5.1 1.3.6.1.2.1.1.1.0 s 'Example notification'
 
 and
 
-| $ snmpinform -v2c -c public 127.0.0.2 0 1.3.6.1.6.3.1.1.5.1 1.3.6.1.2.1.1.1.0 s 'Example notification'
+| $ snmpinform -v2c -c public 195.218.195.228 0 1.3.6.1.6.3.1.1.5.1 1.3.6.1.2.1.1.1.0 s 'Example notification'
 
 """#
 from pysnmp.entity import engine, config
@@ -60,14 +60,14 @@ config.addTransport(
 # First target
 config.addTargetAddr(
     snmpEngine, 'my-nms-1',
-    udp.domainName, ('127.0.0.1', 162),
+    udp.domainName, ('195.218.195.228', 162),
     'my-creds-1',
     tagList='all-my-managers'
 )
 # Second target
 config.addTargetAddr(
     snmpEngine, 'my-nms-2',
-    udp.domainName, ('127.0.0.1', 162),
+    udp.domainName, ('195.218.195.228', 162),
     'my-creds-2',
     tagList='all-my-managers'
 )
