@@ -7,18 +7,18 @@ Send SNMP notification using the following options:
 * SNMPv1
 * with community name 'public'
 * over IPv4/UDP
-* to a Manager at 127.0.0.1:162
+* to a Manager at 195.218.195.228:162
 * send TRAP notification
 * with TRAP ID 'coldStart' specified as an OID
 * include managed objects information:
 * overriding Uptime value with 12345
-* overriding Agent Address with '127.0.0.1'
+* overriding Agent Address with '195.218.195.228'
 * overriding Enterprise OID with 1.3.6.1.4.1.20408.4.1.1.2
 * include managed object information '1.3.6.1.2.1.1.1.0' = 'my system'
 
 Functionally similar to:
 
-| $ snmptrap -v1 -c public 127.0.0.1 1.3.6.1.4.1.20408.4.1.1.2 127.0.0.1 6 432 12345 1.3.6.1.2.1.1.1.0 s 'my system'
+| $ snmptrap -v1 -c public 195.218.195.228 1.3.6.1.4.1.20408.4.1.1.2 195.218.195.228 6 432 12345 1.3.6.1.2.1.1.1.0 s 'my system'
 
 """#
 from pysnmp.entity import engine, config
@@ -44,7 +44,7 @@ config.addTransport(
 )
 config.addTargetAddr(
     snmpEngine, 'my-nms',
-    udp.domainName, ('127.0.0.1', 162),
+    udp.domainName, ('195.218.195.228', 162),
     'my-creds',
     tagList='all-my-managers'
 )
