@@ -8,7 +8,7 @@ Send SNMP TRAP notification using the following options:
 * with user 'usr-md5-des', auth: MD5, priv DES
 * over IPv4/UDP
 * send TRAP notification
-* to a Manager at 127.0.0.1:162
+* to a Manager at 195.218.195.228:162
 * with TRAP ID 'warmStart' specified as an OID
 * include managed object information 1.3.6.1.2.1.1.5.0 = 'system name'
 
@@ -46,7 +46,7 @@ config.addTransport(
 )
 config.addTargetAddr(
     snmpEngine, 'my-nms',
-    udp.domainName, ('127.0.0.1', 162),
+    udp.domainName, ('195.218.195.228', 162),
     'my-creds',
     tagList='all-my-managers'
 )
